Fix some SCSS issues with overflow and base rules

--- a/angular-src/src/app/shared/components/footer/footer.component.scss
+++ b/angular-src/src/app/shared/components/footer/footer.component.scss
@@ -3,7 +3,6 @@
 .footer {
     background-color: $color-dark;
     height: $footer-height;
-    width: 100vw;
 }
 
 .footer__text {
