--- a/angular-src/src/styles/_base.scss
+++ b/angular-src/src/styles/_base.scss
@@ -48,3 +48,13 @@ ul {
 button, input, textarea {
     font-family: Montserrat, Roboto, "Helvetica Neue", sans-serif;
 }
+
+@media only screen and (min-width: 768px) {
+    html, body {
+        font-size: 20px;
+    }
+
+    button {
+        font-size: 90%;
+    }
+}
