--- a/angular-src/src/styles/_section.scss
+++ b/angular-src/src/styles/_section.scss
@@ -8,5 +8,10 @@
     background-color: $color-dark;
     color: $color-white;
     padding: $padding;
+    margin: 0 auto;
     max-width: 960px;
+
+    &--ljust {
+        margin: 0;
+    }
 }
